Fix contrast error

--- a/custom.css
+++ b/custom.css
@@ -21,7 +21,7 @@ main a {
 }
 
 main a:hover {
-	color:#b24444;
+	color:#214872;
 	text-decoration: underline;
 }
 
